--- a/src/pages/publications.mdx
+++ b/src/pages/publications.mdx
@@ -7,13 +7,14 @@ The output of our research and projects has been presented and published in many
 
 Links: <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.webofscience.com/wos/author/record/1733012'>[WebofScience]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://www.scopus.com/authid/detail.uri?authorId=57197741727'>[Scopus]</a> - <a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?hl=en&user=WLTzkOMAAAAJ&view_op=list_works&sortby=pubdate'>[GoogleScholar]</a> 
 
-<highlight  color="#1877F2"><i>Note: J = journal, C = conference, B = book/chapter, and * = corresponding author.</i> </highlight>
+<highlight  color="#1877F2"><i>Note: <a href="#j-journal-articles">J = journal</a>, <a href="#c-conference-proceedings">C = conference</a>, <a href="#b-books--chapters">B = book/chapter</a>, and * = corresponding author.</i> </highlight>
 <br/>
 <br/>
 
 ### [J] Journal Articles
 <ol reversed>
 
+<li>Mukhlif, Y.A., Ramaha, N.T.A., Hameed, A.A., Salman, M., Yon, D.K., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2024) Ant Colony and Whale Optimization Algorithms Aided by Neural Networks for Optimum Skin Lesion Diagnosis: A Thorough Review. Mathematics 2024, 12, 1049. https://doi.org/10.3390/math12071049 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12071049'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:_xSYboBqXhAC'>[GoogleScholar]</a></li>
 <li><b>Syafrudin, M.</b>, Alfian, G., Fitriyani, N.L., Anshari, M. (2024) Applied Artificial Intelligence for Sustainability. Sustainability 2024, 16, 2469. https://doi.org/10.3390/su16062469 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/su16062469'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:bFI3QPDXJZMC'>[GoogleScholar]</a></li>
 <li>Kusumaningrum, R., Khoerunnisa, S.F., Khadijah, K., <b>Syafrudin, M.*</b> (2024) Exploring Community Awareness of Mangrove Ecosystem Preservation through Sentence-BERT and K-Means Clustering. Information 2024, 15, 165. https://doi.org/10.3390/info15030165 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/info15030165'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.co.kr/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:f2IySw72cVMC'>[GoogleScholar]</a></li>
 <li>Abdulrazzaq, M.M., Ramaha, N.T.A., Hameed, A.A., Salman, M., Yon, D.K., Fitriyani, N.L., <b>Syafrudin, M.*</b>, Lee, S.W. (2024) Consequential Advancements of Self-Supervised Learning (SSL) in Deep Learning Contexts. Mathematics 2024, 12, 758. https://doi.org/10.3390/math12050758 <a target='_blank' alt='link' rel='noopener noreferrer' href='https://doi.org/10.3390/math12050758'>[Link]</a>|<a target='_blank' alt='link' rel='noopener noreferrer' href='https://scholar.google.com/citations?view_op=view_citation&hl=en&user=WLTzkOMAAAAJ&sortby=pubdate&citation_for_view=WLTzkOMAAAAJ:pyW8ca7W8N0C'>[GoogleScholar]</a></li>
