--- a/src/pages/team.mdx
+++ b/src/pages/team.mdx
@@ -6,12 +6,12 @@ title: Team
 
 ### <highlight  color="#04be58">Director</highlight>
 <div class="row">
-<div class="col col--2"><img class="circular--square" src="/team/Muhammad_Syafrudin.jpg"/></div>
+<div class="col col--2"><img src="/team/Muhammad_Syafrudin.jpg"/></div>
 
 <div class="col col--10">
 <h3>Muhammad Syafrudin</h3>
 <i>Assistant Professor</i>
-<br/>Department of Artificial Intelligence, Sejong University, Korea
+<br/>Department of Artificial Intelligence and Data Science, Sejong University, Korea
 <br/>Office: No. 502, Daeyang AI Center, Sejong University
 <br/>Email: udin[at]sejong.ac.kr (please change [at] with @)
 <br/>Tel.: +82-2-3408-1879
@@ -25,7 +25,8 @@ title: Team
 
 <h4>Professional Experience</h4>
 <ul>
-<li>Mar 2022 – present: Assistant Professor, Department of Artificial Intelligence (AI), Sejong University, Korea</li>
+<li>Mar 2024 – present: Assistant Professor, Department of Artificial Intelligence and Data Science, Sejong University, Korea</li>
+<li>Mar 2022 – Feb 2024: Assistant Professor, Department of Artificial Intelligence, Sejong University, Korea</li>
 <li>Jan 2023 – present: Chairman, Representative of Indonesian Association of Higher Education in Informatics and Computing (APTIKOM) in Korea, Decree No. KEP. 03/SK/APTIKOM/I/2023</li>
 <li>Mar 2019 – Feb 2022: Assistant Professor, Department of Industrial and Systems Engineering (ISE), Dongguk University, Korea</li>
 </ul>
@@ -36,10 +37,9 @@ title: Team
 ### <highlight  color="#0184c6">Undergraduate</highlight>
 
 <div class="row">
-<div class="col col--2"><img class="circular--square" src="/team/ahyun_2023.jpg"/></div>
+<div class="col col--2"><img src="/team/ahyun_2023.jpg"/></div>
 <div class="col col--10">
 <h3>이아현 (Ahyun Lee)</h3>
-Department of Artificial Intelligence, Sejong University, Korea
 <br/>Research interest: text mining
 <br/>Email: ahyunclara[at]sju.ac.kr
 <br/>Publications:
@@ -53,7 +53,6 @@ Department of Artificial Intelligence, Sejong University, Korea
 <div class="col col--2"></div>
 <div class="col col--10">
 <h3>박수진 (Sujin Park)</h3>
-Department of Artificial Intelligence, Sejong University, Korea
 <br/>Research interest: machine learning
 <br/>Email: sujin76[at]sju.ac.kr
 <br/>Publications:
@@ -62,7 +61,7 @@ Department of Artificial Intelligence, Sejong University, Korea
 </ul>
 </div>
 </div>
-<i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다.</i>
+<i>만약 학부 인턴으로 참여에 관심이 있으시면 언제든지 저에게 연락 주십시오. 여러분은 자신만의 연구 프로젝트를 수행할 기회가 있을 것이며, 여러분의 학습 여정 동안 멘토로서 기쁨을 나눌 수 있습니다. 이전에 우리는 다른 학생들이 프로젝트를 기반으로 연구 논문을 발표하는 데 도움을 준 바 있으며, 비슷한 노력에 여러분을 지원하고 싶어 합니다. If you are interested in participating as an undergraduate intern, please feel free to contact me at any time. You will have the opportunity to conduct your own research project, and I would be delighted to mentor you throughout your learning journey. Previously, we have assisted other students in presenting research papers based on projects, and we would like to support you in similar endeavors.</i>
 <br/><br/><br/>
 
 
@@ -70,13 +69,13 @@ Department of Artificial Intelligence, Sejong University, Korea
 
 YOU?
 
-<i>Please refer to the following link for detailed information on the admissions procedure, requirements, and scholarship details: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
+<i>Please refer to the following link for detailed information on the admissions procedure, requirements, and scholarship: <a href="https://sos.sejong.ac.kr/eng/admission/guide/grad1.do" target="_blank">https://sos.sejong.ac.kr/eng/admission/guide/grad1.do</a> </i> 
 <br/><br/>
 
 ### <highlight  color="#980606">Research Collaborator</highlight>
 
 <br/>
-<i>Explore the collaboration map from the past five years by clicking on the map to view detailed information.</i><br/>
+<i>Explore the collaboration map from the past five years by clicking on the following map.</i><br/>
 <a href="https://sejong.elsevierpure.com/en/persons/muhammad-syafrudin/network-map#network-map-container" target="_blank"><img src="/team/collaboration_map_v20240102.png"/></a><br/>
 <br/>
 
